# salvageunionkit

./: .gitignore  CLAUDE.md  README.md  build.py  requirements.txt
map-generator/: main.py  pyproject.toml
map-generator/app/: _canvas_background.py  _region_context.py  _widgets.py  canvas.py  edge_item.py  main_window.py  node_item.py  sidebar.py
map-generator/app/reference/: __init__.py  _dice.py  reference_view.py  roll_table_card.py  section_card.py
map-generator/app/region_wizard/: page_areas.py  page_encounters.py  page_overview.py  page_review.py  page_settlements.py  page_threats.py  wizard_window.py
map-generator/app/region_workspace/: __init__.py  nav_rail.py  workspace.py
map-generator/app/region_workspace/area_view/: __init__.py  area_view.py  point_inspector.py
map-generator/core/: __init__.py  edge.py  map_graph.py  map_graph_serde.py  node.py  region_data.py
map-generator/core/reference/: __init__.py  data.py  models.py  reference_data.json
map-generator/data/: location_types.json  name_parts.json
map-generator/generators/: __init__.py  _naming.py  _registry.py  _scrap.py  _spatial.py  base.py  point_crawl.py  region.py  region_wizard_gen.py
map-generator/persistence/: __init__.py  engine.py  mappers.py  region_repository.py
map-generator/persistence/schema/: __init__.py  _base.py  area.py  encounter.py  region.py  settlement.py  threat.py
map-generator/ref/: Region-Generation.md
map-generator/renderers/: __init__.py  _colors.py  _draw_chrome.py  _draw_labels.py  _draw_nodes.py  _draw_roads.py  _fonts.py  base.py  pil_renderer.py
(+11 files in other folders)
